# transcendence

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_market_types.py  003_bet_upvotes.py  004_drop_bet_positions_unique.py  005_add_user_bio.py  005_friend_request_unique_constraint.py  006_symmetric_friend_constraint.py  007_friend_request_query_indexes.py  008_add_user_bio.py  009_add_llm_opt_out.py  010_llm_user_config.py  011_resolution_review_table.py  012_add_llm_model_field.py  013_add_celery_task_id_to_bets.py  014_seed_deleted_sentinel_user.py  015_rename_kp_to_lp.py  016_add_bp_fund_entries.py  017_rename_bio_to_mission.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/db/: session.py
backend/app/schemas/: auth.py  bet.py  chat.py  comment.py  friends.py  ledger.py  market.py  notifications.py  profile.py
backend/app/services/: auth_service.py  (+15 more)
backend/scripts/: seed_dev.py
backend/tests/: conftest.py  test_auth.py  test_autoresolution.py  test_bets.py  test_chat.py  test_comments.py  test_config.py  test_economy.py  test_friends.py  test_gdpr.py  test_ledger.py  test_llm.py  test_llm_routes.py  test_market_model_terminology.py  test_market_positions.py  test_markets.py  test_notification_service.py  test_public_api.py  test_resolution.py  test_socket.py  test_tasks.py  test_users.py
(+368 files in other folders)
