[project]
name = "voxpopuli-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "PyJWT[crypto]>=2.10.0",
    "passlib[bcrypt]>=1.7.4",
    "aiosmtplib>=3.0.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "celery>=5.4.0",
    "redis[asyncio]>=5.2.0",
    "bcrypt<4.0.0",
    "cryptography>=43.0.0",
    "python-socketio[asyncio-client]>=5.16.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.1.1",
    "httpx>=0.28.0",
    "aiosqlite>=0.22.1",
    "fakeredis>=2.34.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
skip_covered = false

[tool.black]
line-length = 88
target-version = ["py312"]
